<resources>
    <string name="app_name">IvPlayer</string>
    <string name="send">Отправить</string>
    <string name="label_status_service">Приём сообщений (вкл/выкл):</string>
    <string name="button_clear">очистить</string>
    <string name="button_test">test</string>
    <string name="label_first_name">Имя</string>
    <string name="label_last_name">Фамилия</string>
    <string name="label_register">Регистрация</string>
    <string name="label_login">Логин</string>
    <string name="label_room_status">Кмоната активна (нет/да)</string>
    <string name="label_enter">Вход</string>
    <string name="label_password">Пароль</string>
    <string name="label_refresh">Обновить</string>
    <string name="label_new_room_name">Имя новой комнаты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_create">Создать</string>
    <string name="game_tic_tac_toe">Крестики-Нолики</string>
    <string name="game_fanorona">Фанорона</string>
    <string name="label_menu">Меню</string>
    <string name="label_single_play">Одиночная игра</string>
    <string name="label_network_game">Сетевая игра</string>
    <string name="auth">Вход в систему</string>
    <string name="create_report">Создание отчета</string>
    <string name="start_service">Запуск службы</string>
</resources>
