<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_menu"
        android:textAlignment="center"
        android:textSize="30sp" />

    <View
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center"
        android:layout_marginStart="@dimen/bigMargin"
        android:layout_marginEnd="@dimen/bigMargin"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:textColor="@android:color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSinglePlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_single_play"
            android:textColor="@android:color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNetworkPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_network_game"
            android:textColor="@android:color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStartService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>