<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_register"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/inputBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_below="@id/labelRegister">


        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stdMargin"
            android:hint="@string/label_first_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stdMargin"
            android:hint="@string/label_last_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/inputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stdMargin"
            android:hint="@string/label_login"
            android:inputType="text"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stdMargin"
            android:hint="@string/label_login"
            android:inputType="textPassword"/>

    </LinearLayout>


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputBlock"
        android:layout_centerHorizontal="true"
        android:text="@string/label_register"/>

</RelativeLayout>