<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/input"
        android:text="@string/send"/>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/buttonSend"
        android:text="@string/button_clear"/>

    <Button
        android:id="@+id/buttonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/buttonClear"
        android:text="@string/button_test"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/buttonSend"
        android:lines="1"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/stdMargin"
        android:layout_below="@id/buttonClear"
        android:layout_above="@id/statusService"/>

    <Switch
        android:id="@+id/statusService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/buttonClear"
        android:layout_alignTop="@id/buttonClear"
        android:layout_alignBottom="@id/buttonClear"
        android:layout_margin="@dimen/stdMargin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/statusService"
        android:layout_alignTop="@id/statusService"
        android:layout_toStartOf="@id/statusService"
        android:layout_alignParentStart="true"
        android:textAlignment="gravity"
        android:gravity="center_vertical"
        android:text="@string/label_status_service"/>

</RelativeLayout>