<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/buttonCreateRoom"
        android:layout_alignParentTop="true"
        android:background="@drawable/white_gradient"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNewRoomNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNewRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_new_room_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollGameType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputNewRoomNameLayout">
        <com.google.android.material.chip.ChipGroup
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/gameTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacing="@dimen/stdMargin"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/gameTypeTicTac"
                style="@style/GameTypeChip"
                android:text="@string/game_tic_tac_toe"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/gameTypeFanorona"
                style="@style/GameTypeChip"
                android:text="@string/game_fanorona" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontalScrollGameType"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/stdMargin"
        android:enabled="false"
        android:text="@string/label_create"/>

</RelativeLayout>